<resources>
    <string name="app_name">Okoa</string>
    <string name="login">LoginHere</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an Account?
        Register here.</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="enter_emergency_contact_number">ENTER EMERGENCY CONTACT NUMBER</string>
    <string name="contact_number_1">Contact Number 1</string>
    <string name="contact_number_2">Contact Number 2</string>
    <string name="contact_number_3">Contact Number 3</string>
    <string name="enter_blood_group">Enter Blood Group</string>
    <string name="save">SAVE</string>
    <string name="load">LOAD</string>
    <string name="sending_notification_to_the_emergency_contact">SENDING NOTIFICATION TO THE EMERGENCY CONTACT</string>
    <string name="false_alarm">False Alarm</string>
    <string name="profile_image_description" />
    <string name="Okoa">Okoa</string>
    <string-array name="language_options">
        <item>English</item>
        <item>Spanish</item>
        <item>French</item>
        <!-- Add more languages as needed -->
    </string-array>

</resources>