<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:openDrawer="start"
android:id="@+id/drawer"
tools:context=".MainActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="ExtraText">
    android:background="@color/light_gray">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/contact"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:fontFamily="monospace"
        android:text="@string/enter_emergency_contact_number"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/num1"
        android:layout_width="306dp"
        android:layout_height="60dp"
        android:layout_below="@+id/contact"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/contact_number_1"
        android:textColor="@color/white"
        android:inputType="phone"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="306dp"
        android:layout_height="60dp"
        android:layout_below="@+id/num1"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/contact_number_2"
        android:textColor="@color/white"
        android:inputType="phone"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/num3"
        android:layout_width="306dp"
        android:layout_height="60dp"
        android:layout_below="@+id/num2"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/contact_number_3"
        android:textColor="@color/white"
        android:inputType="phone"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/bloodgroup"
        android:layout_width="210dp"
        android:layout_height="49dp"
        android:layout_below="@+id/num3"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/enter_blood_group"
        android:textColor="@color/Red"
        android:inputType="textPersonName"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/save"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bloodgroup"
        android:layout_marginTop="10dp"
        android:layout_marginStart="60dp"
        android:text="@string/save"
        android:layout_centerHorizontal="false" />

    <Button
        android:id="@+id/load"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bloodgroup"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_toEndOf="@+id/save"
        android:text="@string/load" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/line_chart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/save"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/white" />

</RelativeLayout>

    <com.google.android.material.navigation.NavigationView
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:id="@+id/nav_view"
    app:menu="@menu/main"
    app:headerLayout="@layout/nav_header"
    android:layout_gravity = "start"/>

</androidx.drawerlayout.widget.DrawerLayout>